--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=kotlin-banking-api
+# others enabled by default for observability
+management.otlp.logging.export.enabled=true
